--- a/Minny/style.css
+++ b/Minny/style.css
@@ -683,6 +683,19 @@ Content
 	}
 }
 
+/* Post Formats
+--------------------------------------------- */
+
+.post-format-image {
+	display: block;
+	width: 20px;
+	padding-bottom: 10px;
+	padding-bottom: 1rem;
+	margin: 0 auto 10px;
+	margin: 0 auto 1rem;
+	border-bottom: 1px solid #ccc;
+}
+
 /* Comments
 --------------------------------------------- */
 
@@ -720,6 +733,11 @@ Content
 	
 }
 
+.comment-reply-title,
+.comments h3 {
+	text-align: center;
+}
+
 .comment-content {
 	clear: both;
 }
@@ -748,13 +766,14 @@ Content
 .comment-list li {
 	margin-top: 24px;
 	margin-top: 2.4rem;
-	padding: 32px;
-	padding: 3.2rem;
+	padding: 32px 0;
+	padding: 3.2rem 0;
 }
 
 @media (max-width: 800px) {
 	.comment-list li {
-		padding: 0;
+		padding: 0 20px;
+		padding: 0 2rem;
 	}
 }
 
