--- a/Minny/style.css
+++ b/Minny/style.css
@@ -1,9 +1,9 @@
 /*
-	Theme Name: Minny
+	Theme Name: Minny Pro
 	Description: Minimal blogging.
 	Author: Calvin Koepke
 	Author URI: http://www.clvnk.com
-	Version: 1.0
+	Version: 2.0
 	Template: genesis
 */
 
@@ -15,14 +15,6 @@
 		- Box Sizing
 		- Float Clearing
 */
-
-
-/*
-Imports
----------------------------------------------------------------------------------------------------- */
-
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600);
-
 
 /*
 HTML5 Reset
@@ -92,18 +84,18 @@ html {
 }
 
 body {
-	background-color: #ffffff;
+	background-color: #eee;
 	color: #000;
-	font-family: "Open Sans", Helvetica, Arial, sans-serif;
-	font-size: 14px;
-	font-size: 1.4rem;
+	font-family: "Droid Serif", Baskerville, Georgia, serif;
+	font-size: 16px;
+	font-size: 1.6rem;
 	font-weight: 400;
-	line-height: 1.625;
+	line-height: 1.725;
 }
 
 body > div {
-	font-size: 14px;
-	font-size: 1.4rem;
+	font-size: 16px;
+	font-size: 1.6rem;
 }
 
 a,
@@ -132,7 +124,7 @@ textarea:focus,
 }
 
 a {
-	color: #666;
+	color: #000;
 	text-decoration: underline;
 }
 
@@ -142,7 +134,7 @@ a img {
 }
 
 a:hover {
-	color: #333;
+	color: #976843;
 }
 
 p {
@@ -229,12 +221,16 @@ h6 {
 
 .entry-title {
 	text-align: center;
+	font-style: italic;
 }
 
 .entry-title a {
+	font-style: italic;
 	text-decoration: none;
 	color: #000;
 }
+
+.entry-title a:hover { color: #976843; }
 
 @media (max-width: 800px) {
 	h1.entry-title  {
@@ -243,12 +239,8 @@ h6 {
 	}
 }
 
-.entry-title a:hover {
-	text-decoration: underline;
-}
-
 .site-description {
-	font-family: "Open Sans", Helvetica, Arial, sans-serif;
+	font-family: "Droid Serif", Helvetica, Arial, sans-serif;
 	font-size: 13px;
 	font-size: 1.3rem;
 	color: #bbb;
@@ -267,10 +259,26 @@ h6 {
 }
 
 .entry-meta {
-	text-align: center;
-	font-size: 13px;
-	font-size: 1.3rem;
 	font-style: italic;
+	text-align: center;
+	font-size: 16px;
+	font-size: 1.6rem;
+	color: #727A8D;
+	padding-top: 20px;
+	padding-top: 2rem;
+	border-top: 1px solid #eee;
+}
+
+.entry-meta a {
+	color: #727A8D;
+}
+
+.entry-content a {
+	color: #976843;
+}
+
+.entry-content a:hover {
+	color: #976843;
 }
 
 /* Objects
@@ -297,10 +305,9 @@ input,
 select,
 textarea {
 	background-color: #fff;
-	border: 1px solid #ddd;
-	border-radius: 3px;
-	box-shadow: 1px 1px 3px #eee inset;
-	color: #999;
+	border: 1px solid #bbb;
+	color: #333;
+	font-style: italic;
 	font-size: 14px;
 	font-size: 1.4rem;
 	padding: 16px;
@@ -336,8 +343,7 @@ input[type="submit"],
 	cursor: pointer;
 	padding: 16px 24px;
 	padding: 1.6rem 2.4rem;
-	text-transform: uppercase;
-	width: auto;
+	width: 100%;
 }
 
 button:hover,
@@ -346,7 +352,7 @@ input:hover[type="reset"],
 input:hover[type="submit"],
 .button:hover,
 .entry-content .button:hover {
-	background-color: #f15123;
+	background-color: #976843;
 }
 
 .entry-content .button:hover {
@@ -354,7 +360,6 @@ input:hover[type="submit"],
 }
 
 .button {
-	border-radius: 3px;
 	display: inline-block;
 }
 
@@ -398,12 +403,23 @@ td {
 /* Structure
 --------------------------------------------- */
 
-.site-container { 
+.site-container {
+	background: #fff;
+	border: 1px solid #ddd;
+	max-width: 1200px;
 	width: 100%;
+	margin: 40px auto;
+	margin: 4rem auto;
+}
+
+@media ( max-width: 800px ) {
+	.site-container {
+		margin: 0 auto;
+	}
 }
 
 .site-inner {
-	max-width: 1500px;
+	max-width: 1200px;
 	margin: 0 auto;
 }
 
@@ -547,7 +563,7 @@ Site Navigation
 }
 
 .nav-primary .sub-menu a:hover {
-	color: #000;
+	color: #976843;
 }
 
 /* Secondary Navigation
@@ -600,6 +616,10 @@ Content
 	width: 50%;
 }
 
+.entry-content {
+	text-align: justify;
+}
+
 .entry, 
 .comment-respond {
 	width: 100%;
@@ -619,10 +639,56 @@ Content
 	}
 }
 
-.entry {
-	border-bottom: 1px solid #bbb;
+.entry,
+.pagination {
 	margin: 40px auto;
 	margin: 4rem auto;
+}
+
+.pagination ul {
+	text-align: center;
+	margin: 0;
+}
+
+.pagination ul li {
+	display: inline-block;
+	margin: 0 3px;
+	margin: 0 .3rem;
+}
+
+.pagination a {
+	color: #976843;
+}
+
+.pagination li.active a {
+	font-weight: bold;
+	color: #000;
+}
+
+.archive-title {
+	text-align: center;
+	font-style: italic;
+}
+
+#email-callout,
+.archive-description,
+.taxonomy-description {
+	font-style: italic;
+	background: #f9f9f9;
+	padding: 20px;
+	text-align: center;
+	border: 1px solid #CCC;
+	width: 700px;
+	margin: 0 auto;
+}
+
+#email-callout a {
+	color: #976843;
+	text-decoration: none;
+}
+
+#email-callout p {
+	margin: 0;
 }
 
 @media (max-width: 800px) {
@@ -630,6 +696,26 @@ Content
 		margin: 20px auto;
 		margin: 2rem auto;
 	}
+	#email-callout,
+	.archive-description,
+	.taxonomy-description {
+		width: 100%;
+		padding: 20px;
+		padding: 2rem;
+	}
+}
+
+a.read-more {
+	margin-top: 20px;
+	margin-top: 2rem;
+	display: block;
+	font-size: 22px;
+	font-size: 2.2rem;
+	font-family: Baskerville, Georgia, serif;
+	font-style: italic;
+	color: #000;
+	text-align: center;
+	font-weight: normal;
 }
 
 .single article.post,
@@ -647,13 +733,6 @@ Content
 
 .featured-img img {
 	width: 100%;
-}
-
-.home .featured-img {
-	max-height: 400px;
-	overflow: hidden;
-	margin-bottom: 20px;
-	margin-bottom: 2rem;
 }
 
 .single .featured-img,
@@ -681,6 +760,11 @@ Content
 		margin-bottom: 20px;
 		margin-bottom: 2rem;
 	}
+}
+
+.entry-footer .entry-meta {
+	font-size: 12px;
+	font-size: 1.2rem;
 }
 
 /* Post Formats
@@ -711,8 +795,8 @@ Content
 }
 
 .entry-comments {
-	padding: 50px;
-	padding: 5rem;
+	padding: 0 50px;
+	padding: 0 5rem;
 }
 
 @media (max-width: 800px) {
@@ -734,8 +818,16 @@ Content
 }
 
 .comment-reply-title,
-.comments h3 {
+.entry-comments h3 {
 	text-align: center;
+	padding-bottom: 10px;
+	padding-bottom: 1rem;
+	border-bottom: 1px solid #eee;
+}
+
+.entry-comments h3 {
+	margin-top: 30px;
+	margin-top: 3rem;
 }
 
 .comment-content {
@@ -789,7 +881,12 @@ Content
 }
 
 li.comment {
-	
+	width: 100%;
+}
+
+ul.children {
+	padding-left: 30px;
+	padding-left: 3rem;
 }
 
 .comment .avatar {
@@ -805,6 +902,8 @@ li.comment {
 
 .bypostauthor {
 	border-left: 2px solid #000;
+	padding-left: 30px !important;
+	padding-left: 3rem !important;
 }
 
 @media (max-width: 800px) {
@@ -825,6 +924,44 @@ li.comment {
 Plugins
 ---------------------------------------------------------------------------------------------------- */
 
+/* Newsletter
+--------------------------------------------- */
+
+#newsletter {
+	overflow: hidden;
+	margin-bottom: 50px;
+	margin-bottom: 5rem;
+}
+
+#newsletter .mc-field-group {
+	width: 75%;
+	float: left;
+}
+
+#newsletter .submit {
+	width: 20%;
+	float: right;
+}
+
+@media (max-width: 800px) {
+	#newsletter {
+		margin-bottom: 20px;
+		margin-bottom: 2rem;
+	}
+
+	#newsletter .mc-field-group {
+		width: 100%;
+		float: none;
+		margin-bottom: 10px;
+		margin-bottom: 1rem;
+	}
+
+	#newsletter .submit {
+		width: 100%;
+		float: none;
+	}
+}
+
 /* Simple Social Icons
 --------------------------------------------- */
 
@@ -842,6 +979,76 @@ Plugins
 
 .simple-social-icons ul.aligncenter li {
 	margin-bottom: 0 !important;
+}
+
+/* Contact Form - Jetpack
+--------------------------------------------- */
+
+.contact-form input[type='text'],
+.contact-form input[type='email'],
+.contact-form textarea {
+	width: 100% !important;
+	max-width: 100% !important;
+	margin-bottom: 30px !important;
+	margin-bottom: 3rem !important;
+}
+
+/*
+Jetpack Sharing
+---------------------------------------------------------------------------------------------------- */
+
+.sharedaddy { 
+	padding: 20px 0;
+	padding: 2rem 0;
+}
+.entry-content h3.sd-title { 
+	font-family: Baskerville, Georgia, serif;
+	font-size: 1.1em;
+	line-height: 1.5;
+	float: left;
+}
+.sd-content ul li { display: inline-block; list-style: none; }
+
+ 
+.content div.sharedaddy div.sd-block {
+	border: none;
+	padding: 0;
+}
+
+.content div.sharedaddy .sd-content ul {
+	margin: 0;
+	text-align: left;
+}
+ 
+.content div.sharedaddy a.sd-button {
+	padding: 0 10px;
+	padding: 0 1rem;
+	box-shadow: none;
+}
+ 
+.content .sd-social-icon-text a.sd-button > span, a.sd-button > span {
+	opacity: 1;
+	padding: 6px 12px;
+}
+ 
+.content a.sd-button > span {
+	background-image: none !important;
+	background: #fff;
+	border: none;
+	color: #000;
+	font-size: 12px;
+	font-weight: 400;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+}
+ 
+.content a.sd-button:hover > span {
+	color: #976843;
+}
+ 
+.sd-content .sd-button span.share-count {
+	color: #976843 !important;
+	font-size: 100% !important;
 }
 
 /*
@@ -912,11 +1119,17 @@ img.alignright,
 	margin: 0 0 2.4rem 2.4rem;
 }
 
+.wp-caption img {
+	width: 100%;
+}
+
 .wp-caption-text {
-	font-size: 14px;
-	font-size: 1.4rem;
-	font-weight: 700;
+	font-size: 12px;
+	font-size: 1.2rem;
+	font-style: italic;
 	text-align: center;
+	color: #555;
+	margin-bottom: 0 !important;
 }
 
 .gallery-caption {
@@ -936,6 +1149,8 @@ Footer
 ---------------------------------------------------------------------------------------------------- */
 
 .site-footer {
+	font-size: 14px;
+	font-size: 1.4rem;
 	margin-top: 40px;
 	margin-top: 4rem;
 	padding: 20px 0;
