Update theme metadata and remove old malicious domain.

--- a/themes/concise/style.css
+++ b/themes/concise/style.css
@@ -1,9 +1,9 @@
 /*
  * Theme Name: Concise
  * Description: A beautifully simple and sophisticated theme with an emphasis on minimalsim, mobile-friendliness, and typography.
- * Theme URI: http://www.calvinmakes.com
- * Author: Calvin Makes
- * Author URI: http://www.twitter.com/calvin_makes
+ * Theme URI: https://github.com/cjkoepke/free-genesis-themes
+ * Author: Calvin Koepke
+ * Author URI: https://calvinkoepke.com
  * Version: 2.0.1
  * License: GNU General Public License v2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
